// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link renders the UI snapshot correctly 1`] = `
<a
  className="chakra-link css-1xdhyk6"
  data-testid="ds-link"
  href="#passed-in-link"
  id="standard-link"
  rel={null}
  target={null}
>
  Standard
</a>
`;

exports[`Link renders the UI snapshot correctly 2`] = `
<a
  className="chakra-link css-1xdhyk6"
  data-testid="ds-link"
  href="#passed-in-link"
  id="forwards-link"
  rel={null}
  target={null}
>
  Forwards
  <svg
    aria-hidden={true}
    className="chakra-icon css-1vgifmd"
    data-file-name="SvgArrow"
    focusable={false}
    id="forwards-link-direction-icon"
    role="img"
    title="arrow icon"
  />
</a>
`;

exports[`Link renders the UI snapshot correctly 3`] = `
<a
  className="chakra-link css-1xdhyk6"
  data-testid="ds-link"
  href="#passed-in-link"
  id="backwards-link"
  rel={null}
  target={null}
>
  <svg
    aria-hidden={true}
    className="chakra-icon css-1vgifmd"
    data-file-name="SvgArrow"
    focusable={false}
    id="backwards-link-direction-icon"
    role="img"
    title="arrow icon"
  />
  Backwards
</a>
`;

exports[`Link renders the UI snapshot correctly 4`] = `
<a
  className="chakra-link css-1xdhyk6"
  data-testid="ds-link"
  href="#passed-in-link"
  id="external-link"
  rel="nofollow noopener noreferrer"
  target="_blank"
>
  External
  <span
    className="css-0"
  >
    This link opens in a new window
  </span>
  <svg
    aria-hidden={true}
    className="chakra-icon css-1vgifmd"
    data-file-name="SvgActionLaunch"
    focusable={false}
    id="external-link-external-icon"
    role="img"
    title="External link"
  />
</a>
`;

exports[`Link renders the UI snapshot correctly 5`] = `
<a
  className="chakra-link css-1xdhyk6"
  data-testid="ds-link"
  href="#passed-in-link"
  id="standalone-link"
  rel={null}
  target={null}
>
  Standalone
  <svg
    aria-hidden={true}
    className="chakra-icon css-1vgifmd"
    data-file-name="SvgArrow"
    focusable={false}
    id="standalone-link-standalone-icon"
    role="img"
    title="Navigation arrow"
  />
</a>
`;

exports[`Link renders the UI snapshot correctly 6`] = `
<a
  className="chakra-link css-1xdhyk6"
  data-testid="ds-link"
  href="#passed-in-link"
  id="button-link"
  rel={null}
  target={null}
>
  Button Primary
</a>
`;

exports[`Link renders the UI snapshot correctly 7`] = `
<a
  className="chakra-link css-1xdhyk6"
  data-testid="ds-link"
  href="#passed-in-link"
  id="button-link"
  rel={null}
  target={null}
>
  Button Secondary
</a>
`;

exports[`Link renders the UI snapshot correctly 8`] = `
<a
  className="chakra-link css-1xdhyk6"
  data-testid="ds-link"
  href="#passed-in-link"
  id="button-link"
  rel={null}
  target={null}
>
  Button Pill
</a>
`;

exports[`Link renders the UI snapshot correctly 9`] = `
<a
  className="chakra-link css-1xdhyk6"
  data-testid="ds-link"
  href="#passed-in-link"
  id="button-link"
  rel={null}
  target={null}
>
  Button Callout
</a>
`;

exports[`Link renders the UI snapshot correctly 10`] = `
<a
  className="chakra-link css-1xdhyk6"
  data-testid="ds-link"
  href="#passed-in-link"
  id="button-link"
  rel={null}
  target={null}
>
  Button No Brand
</a>
`;

exports[`Link renders the UI snapshot correctly 11`] = `
<a
  className="chakra-link css-1xdhyk6"
  data-testid="ds-link"
  href="#passed-in-link"
  id="button-link"
  rel={null}
  target={null}
>
  Button Disabled
</a>
`;

exports[`Link renders the UI snapshot correctly 12`] = `
<a
  className="chakra-link css-1xdhyk6"
  data-testid="ds-link"
  href="#passed-in-link"
  id="icon-link"
  rel={null}
  target={null}
>
  <svg
    aria-hidden={true}
    className="chakra-icon css-1vgifmd"
    data-file-name="SvgDownload"
    focusable={false}
    id="link-icon"
    role="img"
    title="download icon"
  />
  Download
</a>
`;

exports[`Link renders the UI snapshot correctly 13`] = `
<a
  className="chakra-link css-1xdhyk6"
  data-testid="ds-link"
  id="anchor-link"
  rel={null}
  target={null}
>
  <a
    href="#existing-anchor-tag"
  >
    check link
  </a>
</a>
`;

exports[`Link renders the UI snapshot correctly 14`] = `
<a
  className="chakra-link css-1xdhyk6"
  data-testid="ds-link"
  id="anchor-icon-link"
  rel={null}
  target={null}
>
  <svg
    aria-hidden={true}
    className="chakra-icon css-1vgifmd"
    data-file-name="SvgCheck"
    focusable={false}
    id="link-icon"
    role="img"
    title="check icon"
  />
  <a
    href="#existing-anchor-tag"
  >
    check link
  </a>
</a>
`;

exports[`Link renders the UI snapshot correctly 15`] = `
<a
  className="chakra-link css-16h1ce8"
  data-testid="ds-link"
  href="#passed-in-link"
  id="chakra"
  rel={null}
  target={null}
>
  Standard
</a>
`;

exports[`Link renders the UI snapshot correctly 16`] = `
<a
  className="chakra-link css-1xdhyk6"
  data-testid="props"
  href="#passed-in-link"
  id="props"
  rel={null}
  target={null}
>
  Standard
</a>
`;

exports[`Link renders the UI snapshot correctly 17`] = `
<a
  className="chakra-link css-1xdhyk6"
  data-testid="props"
  id="props"
  rel={null}
  target={null}
>
  <a
    href="#passed-in-link"
  >
    Standard
  </a>
</a>
`;
